@@ -15,6 +15,8 @@ VERSION 0.8
 - added a function deleteById carrying a Long parameter to the DAOs
 - added an constructor based "transient" determination to ModelBase
 - added some utils for basic date calculation
+- added queryByExample function in order to do QBE :)
+
 
 --- DEPRECATION NOTICE ---
 - don't inherit AbstractModelBase any more! The "id" column clashes
